infra/alb/security_group.tf
resource "aws_security_group" "lb" {
  name        = "${local.prefix}-lb-sg"
  description = "Controls access to the ALB"
  vpc_id      = data.terraform_remote_state.base.outputs.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
